unpackaged/main/default/objects/DriveAppointmentCountAPI__x/DriveAppointmentCountAPI__x.object-meta.xml
<CustomObject>
    <description>Drive Appointment Counts</description>
    <externalDataSource>EDS</externalDataSource>
    <externalName>bzl_dp_drive_apmt_cnt_api</externalName>
    <label>Drive Appointment Count</label>
    <pluralLabel>Drive Appointment Count</pluralLabel>
</CustomObject>