unpackaged/main/default/objects/DriveAppointmentCountAPI__x/fields/external_id__c.field-meta.xml
<CustomField>
    <fullName>external_id__c</fullName>
    <description>external_id</description>
    <externalDeveloperName>external_id</externalDeveloperName>
    <label>External ID</label>
    <length>9</length>
    <type>Text</type>
</CustomField>