unpackaged/main/default/objects/DriveAppointmentCountAPI__x/fields/guid__c.field-meta.xml
<CustomField>
    <fullName>guid__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>guid</description>
    <externalDeveloperName>guid</externalDeveloperName>
    <label>guid</label>
    <referenceTo>sked_Drive__c</referenceTo>
    <relationshipLabel>Drive Appointment Count (guid)</relationshipLabel>
    <relationshipName>bz_dp_drive_apmt_cnt_api</relationshipName>
    <type>Lookup</type>
</CustomField>